--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -5,8 +5,11 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :address %>
-    <%= f.input :description %>
+    <%= f.input :address,
+      input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
+      wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+    %>
+    <%= f.input :description, class: "hello" %>
     <%= f.input :price_per_night %>
     <%= f.input :number_of_guests %>
   </div>
