--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,19 +1,32 @@
 <p style="color: green"><%= notice %></p>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-sm-8">
+      <h1>Flats</h1>
+      <div id="flats">
 
-<h1>Flats</h1>
-
-<div id="flats">
-  <% @flats.each do |flat| %>
-    <%= render flat %>
-    <p>
-      <%= link_to "Show this flat", flat %>
-    </p>
-  <% end %>
-  <div style="width: 100%; height: 600px;"
-  data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+      <div id="flats">
+        <%= form_with url: flats_path, method: :get, class: "d-flex" do %>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Find a flat"
+          %>
+          <%= submit_tag "Search", class: "btn btn-primary" %>
+        <% end %>
+        <% @flats.each do |flat| %>
+          <%= render flat %>
+          <p>
+            <%= link_to "Show this flat", flat %>
+          </p>
+        <% end %>
+        <div style="width: 100%; height: 600px;"
+        data-controller="map"
+        data-map-markers-value="<%= @markers.to_json %>"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+      </div>
+    </div>
+  </div>
 </div>
-
 
 <%= link_to "New flat", new_flat_path if policy(Flat).new? %>
