--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,1 +1,7 @@
-<%= render "form", booking: @booking %>
+<div class="container mt-3">
+  <div class="row justify-content-center">
+    <div class="col-sm-8">
+      <%= render "form", booking: @booking %>
+    </div>
+  </div>
+</div>
