--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -2,6 +2,6 @@
   <%= simple_form_for([@flat, @booking]) do |f| %>
     <%= f.input :start_date, as: :string, input_html: { data: { flatpickr_target: "startDate" } } %>
     <%= f.input :end_date, as: :string, input_html: { data: { flatpickr_target: "endDate" } } %>
-    <%= f.submit 'Book now' %>
+    <%= f.submit 'Book now', class: "btn btn-primary px-3" %>
   <% end %>
 </div>
