--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New flat</h1>
-
-<%= render "form", flat: @flat %>
-
-<br>
-
-<div>
-  <%= link_to "Back to flats", flats_path %>
+<div class="container mt-3">
+  <div class="row justify-content-center">
+    <div class="col-sm-8">
+      <h1>New flat</h1>
+      <%= render "form", flat: @flat %>
+      <div class="px-2 mt-3">
+        <%= link_to "Back to flats", flats_path, class: "btn btn-primary px-3" %>
+      </div>
+    </div>
+  </div>
 </div>
