--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,12 +1,28 @@
 <p style="color: green"><%= notice %></p>
-
-<%= render @flat %>
-<%= link_to "Book Now", new_flat_booking_path(@flat), class: "btn btn-gradient" %>
-
-<div>
-  <% if policy(@flat).edit? %>
-    <%= link_to "Edit this flat", edit_flat_path(@flat) %> |
-  <% end %>
-  <%= button_to "Destroy this flat", @flat, method: :delete if policy(@flat).destroy? %>
-  <%= link_to "Back to flats", flats_path %>
+<div class="container mt-5 mb-5 d-flex justify-content-center align-items-center">
+  <div class="card">
+    <div class="inner-card"> <img src="<%= @flat.picture_url%>" class="img-fluid rounded">
+      <div class="d-flex justify-content-between align-items-center mt-3 px-2">
+          <h4><%= @flat.name %></h4>
+      </div>
+      <div class="mt-2 px-2">
+        <small><%= @flat.description %></small>
+      </div>
+      <div class="px-2">
+          <h3><%= @flat.price_per_night %></h3>
+      </div>
+      <div class="px-2 mt-3">
+        <%= link_to "Book Now", new_flat_booking_path(@flat), class: "btn btn-primary px-3" %>
+        <%= link_to "Back to flats", flats_path, class: "btn btn-outline-primary px-3" %>
+      </div>
+      <div class="px-2 my-3 d-flex">
+        <% if policy(@flat).edit? %>
+          <%= link_to "Edit this flat", edit_flat_path(@flat), class: "btn btn-primary px-3" %>
+        <% end %>
+        <div class="px-1">
+          <%= button_to "Destroy this flat", @flat, class: "btn btn-outline-primary", method: :delete if policy(@flat).destroy? %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
