--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -4,12 +4,12 @@
     <div class="col-sm-8">
       <h1>Flats</h1>
       <div id="flats">
-        <%= form_with url: flats_path, method: :get, class: "d-flex" do %>
-          <%= text_field_tag :query,
-            params[:query],
+        <%= form_with model: @flat, method: :get, class: "d-flex" do |f| %>
+          <%= f.text_field :query,
             class: "form-control",
             placeholder: "Find a flat"
           %>
+          <%= f.select :number_of_guests, (1..30) %>
           <%= submit_tag "Search", class: "btn btn-primary" %>
         <% end %>
         <% @flats.each do |flat| %>
